# stellari.sh

./: .gitignore  README.md  ssh-keygen  sym.py
.github/workflows/: build.yaml
apis/: danbooru.proto  konachan.proto  nhentai.proto
apps/api-gateway/: .env.example  gen-env-types.sh  gen.sh  package.json
apps/api-gateway/src/: app.module.ts
apps/api-gateway/src/danbooru/: danbooru.controller.spec.ts  danbooru.controller.ts  danbooru.module.ts  danbooru.service.spec.ts  danbooru.service.ts
apps/api-gateway/src/konachan/: konachan.controller.spec.ts  konachan.controller.ts  konachan.module.ts  konachan.service.spec.ts  (+1 more)
apps/danbooru/: apis  gen.sh  go.mod  main.go
apps/konachan/: Cargo.toml  build.rs
apps/konachan/src/: main.rs
apps/konachan/src/apis/: konachan.v1.rs  mod.rs
apps/konachan/src/models/: post.rs
apps/nhentai/: develop  pom.xml
deployments/.argocd/: stellaris.yaml
deployments/.whoami/: kustomization.yaml
dockerfiles/: api-gateway.Dockerfile  danbooru.Dockerfile  konachan.Dockerfile  nhentai.Dockerfile
infrastructure/argocd/: argocd-cm.yaml  install  kustomization.yaml
infrastructure/argocd/setup/: kustomization.yaml
infrastructure/gcp/: Pulumi.dev.yaml  Pulumi.yaml  config.ts  index.ts  package.json
infrastructure/gcp/kube/: gke.yaml  index.ts
infrastructure/gcp/net/: index.ts
infrastructure/istio/: install
infrastructure/istio/cert-manager/: kustomization.yaml
infrastructure/istio/gateways/: argocd.yaml  kustomization.yaml  whoami.yaml
infrastructure/sealed-secrets/: kustomization.yaml  repository-secret.sealed.yaml
(+12 files in other folders)
